@@ -1,23 +1,25 @@
 package ru.sfedu.teamselection.config;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import lombok.RequiredArgsConstructor;
+
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.web.cors.CorsConfiguration;
 import ru.sfedu.teamselection.config.security.SimpleAuthenticationSuccessHandler;
 import ru.sfedu.teamselection.service.Oauth2UserService;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-import java.util.List;
+import ru.sfedu.teamselection.util.CustomAuthenticationEntryPoint;
 
 @Configuration
 @EnableWebSecurity
@@ -26,6 +28,9 @@ public class SecurityConfig {
 
     private final Oauth2UserService oauth2UserService;
     private final SimpleAuthenticationSuccessHandler simpleAuthenticationSuccessHandler;
+    private final CustomAuthenticationEntryPoint customAuthenticationEntryPoint;
+    private final String frontendLoginUrl = "http://localhost:5173/login";
+
 
     private static final String ADMIN_ROLE_NAME = "ADMIN";
     public static final String LOGOUT_URL = "/api/v1/auth/logout";
@@ -34,48 +39,67 @@ public class SecurityConfig {
     private String frontendUrl;
 
     public SecurityConfig(Oauth2UserService oauth2UserService,
-                          SimpleAuthenticationSuccessHandler simpleAuthenticationSuccessHandler) {
+                          SimpleAuthenticationSuccessHandler simpleAuthenticationSuccessHandler,
+                          CustomAuthenticationEntryPoint customAuthenticationEntryPoint) {
         this.oauth2UserService = oauth2UserService;
         this.simpleAuthenticationSuccessHandler = simpleAuthenticationSuccessHandler;
+        this.customAuthenticationEntryPoint = customAuthenticationEntryPoint;
     }
 
     @SuppressWarnings("checkstyle:MultipleStringLiterals")
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .authorizeHttpRequests((auth) -> auth
+                .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/error").permitAll()
-                        .requestMatchers("/login").anonymous()
+                        .requestMatchers("/login", "/registration").anonymous()
                         .requestMatchers(HttpMethod.DELETE).hasAuthority(ADMIN_ROLE_NAME)
-                        .anyRequest().authenticated())
+                        .requestMatchers("/api/**").authenticated()
+                        .anyRequest().permitAll()
+                )
+
+
                 .logout(logout -> logout
-                        .logoutUrl(LOGOUT_URL).deleteCookies("JSESSIONID", "SessionId")
-                        .logoutSuccessUrl(frontendUrl + "/login"))
+                        .logoutUrl(LOGOUT_URL)
+                        .deleteCookies("JSESSIONID", "SessionId")
+                        .logoutSuccessUrl(frontendUrl + "/login")
+                )
+
                 .oauth2Login(login -> login
                         .userInfoEndpoint(endpoint ->
                                 endpoint.userService(oauth2UserService)
                         )
                         .successHandler(simpleAuthenticationSuccessHandler)
+                )
+
+                .exceptionHandling(handler -> handler
+                        .authenticationEntryPoint(new CustomAuthenticationEntryPoint(frontendLoginUrl))
                 );
 
         return http.build();
     }
 
+
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of(frontendUrl));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setExposedHeaders(List.of("SessionId")); // Разрешаем браузеру видеть эти заголовки
-        configuration.setAllowCredentials(true); // Разрешаем отправку cookies
-
+        CorsConfiguration corsConfiguration = new CorsConfiguration();
+        corsConfiguration.setAllowCredentials(true); // Required for session/cookie-based auth
+        corsConfiguration.setAllowedOrigins(List.of("http://localhost:5173")); // Explicitly define allowed origin
+        corsConfiguration.setAllowedHeaders(Arrays.asList(
+                "Origin", "Content-Type", "Accept", "Authorization", "X-Requested-With"
+        ));
+        corsConfiguration.setExposedHeaders(Arrays.asList("Content-Type", "Authorization")); // Headers you expose to the frontend
+        corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Only HTTP methods
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", corsConfiguration);
         return source;
     }
+
+
+
 
 
 }
